--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "redux-persist": "^6.0.0",
+    "uuid": "^10.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
